--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,9 @@
     ],
     "authors": [
         {
-            "name": "Alex Bilbie",
-            "email": "hello@alexbilbie.com",
-            "homepage": "http://www.alexbilbie.com",
+            "name": "lichv",
+            "email": "hello@lichv.com",
+            "homepage": "http://www.lichv.com",
             "role": "Developer"
         }
     ],
